updated explanation for problem 3

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -39,7 +39,7 @@
     "2. review Two Pointers and complete all problems for this section - DONE\n",
     "3. review Binary Search and complete all problems for this section - DONE\n",
     "4. review Stack and complete all problems for this section - DONE\n",
-    "5. review Sliding Window and compete all problems for this section - TODO\n",
+    "5. review Sliding Window and compete all problems for this section - IN PROGRESS: at 424. Longest Repeating Character Replacement\n",
     "6. review Linked List and complete all problems for this section - TODO"
    ]
   },
@@ -4610,7 +4610,6 @@
    "cell_type": "markdown",
    "id": "baef94a3-132e-4c60-aefb-ca94548f634c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4840,7 +4839,7 @@
     "\n",
     "then iterate through the range of length of s, each iteration acting as your right pointer. this makes sense because as we saw in my example, no matter the condition you always want to increment right and you need your substring to be contiguous. \n",
     "\n",
-    "the while loop now deals with the case where duplicates are encountered. in this solution the left pointer is almost exclusively used to remove characters from the set. while the letter at the right pointer exists in your set charSet, remove characters in the set using the left pointer and increment your left pointer by 1 until there are no more duplicates, but do not increment right pointer. this allows you to move up your left pointer in a smart way. \n",
+    "the while loop now deals with the case where duplicates are encountered. in this solution the left pointer is almost exclusively used to remove characters from the set. while the letter at the right pointer exists in your set charSet, remove characters in the set using the left pointer (which has not moved until duplicates are encountered; it will remove characters encountered earlier) and increment your left pointer by 1 until you've deleted the duplicate, allowing you to continue again. this allows you to move up your left pointer in a smart way. \n",
     "\n",
     "if duplicates do not exist, then continue adding characters to the set using the right pointer and update the new max if there is one (also kinda like i did in my solution). there is no need to increment the right pointer ever because it is done automatically \n",
     "\n",
