--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -4610,6 +4610,7 @@
    "cell_type": "markdown",
    "id": "baef94a3-132e-4c60-aefb-ca94548f634c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
