updated explanation for problem 424

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -39,7 +39,7 @@
     "2. review Two Pointers and complete all problems for this section - DONE\n",
     "3. review Binary Search and complete all problems for this section - DONE\n",
     "4. review Stack and complete all problems for this section - DONE\n",
-    "5. review Sliding Window and compete all problems for this section - IN PROGRESS: at 424. Longest Repeating Character Replacement\n",
+    "5. review Sliding Window and compete all problems for this section - IN PROGRESS\n",
     "6. review Linked List and complete all problems for this section - TODO"
    ]
   },
@@ -5013,7 +5013,7 @@
    "metadata": {},
    "source": [
     "#### explanation\n",
-    "my own: this optimization is quite simlar to the previous solution, but with one small distinction that makes it much faster. instead of having a result variable, you have a maximum frequency variable maxf. each iteration that you go through, after incrementing the count of the current letter at position r, try to update the current maxf but taking the max between current maxf and the count of the letter you currently are on (count[s[r]]). then check if your current window minus the maxf is smaller than k, similar to the while loop above. if it is, decrement the count for the letter at position l in your hashmap and increment your left pointer by 1, once again similar to the while loop in the unoptimized solution. once the entire string has been parsed, return the window size (r - l + 1). the hard part to understand is why returning the window at the end gives a correct answer.\n",
+    "my own: this optimization is quite simlar to the previous solution, but with one small distinction that makes it much faster. instead of having a result variable, you have a maximum frequency variable maxf. each iteration that you go through, after incrementing the count of the current letter at position r, try to update the current maxf by taking the max between current maxf and the count of the letter you currently are on (count[s[r]]). then check if your current window minus the maxf is smaller than k, similar to the while loop above. if it is, decrement the count for the letter at position l in your hashmap and increment your left pointer by 1, once again similar to the while loop in the unoptimized solution. once the entire string has been parsed, return the window size (r - l + 1). the hard part to understand is why returning the window at the end gives a correct answer.\n",
     "\n",
     "the idea here is that maximum frequency maxf will never decrease, only increase or stay the same. but it is still important to continue keeping track of the number of occurence of each character in order to ensure that your window/substring is valid. and so the result will only be increased if we are able to increase our window length and/or maxf while staying under k, since window - maxf > k is the deciding factor if our window is valid or not. even if character count get increased or decreased, maxf won't change until the count of a letter goes beyond the current maxf. so by using maxf and the current window size we are able to find the maximum window size, and using that if condition we are able to see if our window is valid, therefore returning the window size works to hand in our result, because we don't acually care where we are in the string, just the counts themselves\n",
     "\n",
