--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -4610,7 +4610,6 @@
    "cell_type": "markdown",
    "id": "baef94a3-132e-4c60-aefb-ca94548f634c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -4851,7 +4850,6 @@
    "cell_type": "markdown",
    "id": "d6dfc820-8224-45f6-8a37-b5cfb8981c3f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5052,6 +5050,44 @@
     "# status = success\n",
     "# NOTE: this was done shortly after the explanation so the code was fresh in mind... but wanted to do it my own way\n",
     "# NOTE: my own way, although easier for me to write, is more verbose and not as fast as the unoptimized leetcode solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e9f0fc9-d866-4b31-bb47-2961226f9726",
+   "metadata": {},
+   "source": [
+    "### 567. Permutation in String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60075c83-4cba-4366-8413-ee90abad630a",
+   "metadata": {},
+   "source": [
+    "Given two strings s1 and s2, return true if s2 contains a permutation of s1, or false otherwise.\n",
+    "\n",
+    "In other words, return true if one of s1's permutations is the substring of s2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c2561d6a-f636-47a6-8a0d-f2c4454da146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "43fbc6ac-083e-436f-8e0d-65ee38ed655d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution"
    ]
   },
   {
