--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -4850,6 +4850,7 @@
    "cell_type": "markdown",
    "id": "d6dfc820-8224-45f6-8a37-b5cfb8981c3f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5072,8 +5073,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c2561d6a-f636-47a6-8a0d-f2c4454da146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        \n",
+    "\n",
+    "        s1map = {}\n",
+    "        s2map = {}\n",
+    "\n",
+    "        for s in s1:\n",
+    "            s1map[s] = 1 + s1map.get(s, 0)\n",
+    "\n",
+    "        # you would start to look as soon as a letter in s2 matches a letter in s1 \n",
+    "        for r in range(len(s2)):\n",
+    "            if s2[r] in s1map:\n",
+    "\n",
+    "                if not s2map:\n",
+    "                    l = r\n",
+    "\n",
+    "                s2map[s2[r]] = 1 + s2map.get(s2[r], 0)\n",
+    "\n",
+    "                if s1map == s2map:\n",
+    "                    return True\n",
+    "            elif s2map and s2[r] not in s1map:\n",
+    "                while l < r:\n",
+    "                    s2map[s2[l]] -= 1\n",
+    "                    l += 1\n",
+    "                s2map.clear()\n",
+    "                \n",
+    "        return False\n",
+    "\n",
+    "# status = failure\n",
+    "# NOTE: the while loop here is entirely pointless - didn't really make use of sliding windown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "515d3c32-a8a5-46c6-89aa-536439af9efe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt 2:\n",
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        \n",
+    "\n",
+    "        s1map = {}\n",
+    "        s2map = {}\n",
+    "\n",
+    "        for s in s1:\n",
+    "            s1map[s] = 1 + s1map.get(s, 0)\n",
+    "\n",
+    "        # you would start to look as soon as a letter in s2 matches a letter in s1 \n",
+    "        for r in range(len(s2)):\n",
+    "            if s2[r] in s1map:\n",
+    "\n",
+    "                if not s2map:\n",
+    "                    l = r\n",
+    "\n",
+    "                s2map[s2[r]] = 1 + s2map.get(s2[r], 0)\n",
+    "\n",
+    "                if s1map == s2map:\n",
+    "                    return True\n",
+    "\n",
+    "                if s1map[s2[r]] < s2map[s2[r]] and s2[l] == s2[r]:\n",
+    "                    s2map[s2[l]] -= 1\n",
+    "                    l += 1\n",
+    "\n",
+    "\n",
+    "            elif s2map and s2[r] not in s1map:\n",
+    "                s2map.clear()\n",
+    "                \n",
+    "        return False\n",
+    "# status = failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04412def-ecbc-4561-a825-2161c5f0383a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt 3\n",
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        \n",
+    "\n",
+    "        s1map = {}\n",
+    "        s2map = {}\n",
+    "\n",
+    "        for s in s1:\n",
+    "            s1map[s] = 1 + s1map.get(s, 0)\n",
+    "\n",
+    "        # you would start to look as soon as a letter in s2 matches a letter in s1 \n",
+    "        for r in range(len(s2)):\n",
+    "            if s2[r] in s1map:\n",
+    "\n",
+    "                if not s2map:\n",
+    "                    l = r\n",
+    "\n",
+    "                s2map[s2[r]] = 1 + s2map.get(s2[r], 0)\n",
+    "\n",
+    "                if s1map == s2map:\n",
+    "                    return True\n",
+    "\n",
+    "                while s1map[s2[r]] < s2map[s2[r]]:\n",
+    "                    s2map[s2[l]] -= 1\n",
+    "                    l += 1\n",
+    "\n",
+    "\n",
+    "            elif s2map and s2[r] not in s1map:\n",
+    "                s2map.clear()\n",
+    "                \n",
+    "        return False\n",
+    "    \n",
+    "# status = success\n",
+    "# NOTE: good time complexity but bad space complexity. way to solve this without 2 hashmaps?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9afbf99-0ad1-4632-a063-b8990c4232ba",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "for my code: my idea here was to use the solution in problem 242. Valid Anagram and combine it with a sliding window.\n",
+    "\n",
+    "you begin by creating a hashmap of all the characters and their counts for s1. \n",
+    "\n",
+    "then you begin iterating through the range of s2. the sliding window begins as soon as a character in s2 is encountered that exists in s1, using the hashmap to check. because the window begins now, the hashmap for s2 does not exist yet and so you can assign your left pointer to the current value of r. you would then begin building the hashmap for s2 in a similar way you did for s1 while growing the window. if the hashmap for s1 is identical to the one for s2, you can return true as it means a permutation exists.\n",
+    "\n",
+    "if you encounter a character in s2 that exists in s1, but after adding it to the hashmap of s2 the count for that character is greater than in the hashmap for s1, you need to shorten your window using a while loop and remove counts from the s2 hashmap. each iteration in the while loop, use your left pointer to decrement the count of the character at index l by 1 in the s2 hashmap, and increment your left pointer by 1. continue until the count of the character at index r is no longer greater in the s2 hashmap.\n",
+    "\n",
+    "if you encounter a character in s2 that does not exist in s1, you must clear your hashmap at s2 and restart your window."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "43fbc6ac-083e-436f-8e0d-65ee38ed655d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution\n",
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        if len(s1) > len(s2):\n",
+    "            return False\n",
+    "\n",
+    "        s1Count, s2Count = [0] * 26, [0] * 26\n",
+    "        for i in range(len(s1)):\n",
+    "            s1Count[ord(s1[i]) - ord(\"a\")] += 1\n",
+    "            s2Count[ord(s2[i]) - ord(\"a\")] += 1\n",
+    "\n",
+    "        matches = 0\n",
+    "        for i in range(26):\n",
+    "            matches += 1 if s1Count[i] == s2Count[i] else 0\n",
+    "\n",
+    "        l = 0\n",
+    "        for r in range(len(s1), len(s2)):\n",
+    "            if matches == 26:\n",
+    "                return True\n",
+    "\n",
+    "            index = ord(s2[r]) - ord(\"a\")\n",
+    "            s2Count[index] += 1\n",
+    "            if s1Count[index] == s2Count[index]:\n",
+    "                matches += 1\n",
+    "            elif s1Count[index] + 1 == s2Count[index]:\n",
+    "                matches -= 1\n",
+    "\n",
+    "            index = ord(s2[l]) - ord(\"a\")\n",
+    "            s2Count[index] -= 1\n",
+    "            if s1Count[index] == s2Count[index]:\n",
+    "                matches += 1\n",
+    "            elif s1Count[index] - 1 == s2Count[index]:\n",
+    "                matches -= 1\n",
+    "            l += 1\n",
+    "        return matches == 26\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9a48010-f29a-4b2b-9950-66cf16e62258",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: the leetcode solution uses an overall similar logic, except this time he uses arrays and ASCII value instead of hashmaps to look at character count, and instead of comparing the arrays directly he uses a matches variable to compare equality.\n",
+    "\n",
+    "my solution is much easier to code, but his is more efficient, so might be worth looking into in a later review."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dcd8b8f-676a-40ae-bc5d-523f0a7b21d9",
+   "metadata": {},
+   "source": [
+    "### 76. Minimum Window Substring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d9b2cb0-5c50-4e5a-b775-6a685cfe57d3",
+   "metadata": {},
+   "source": [
+    "Given two strings s and t of lengths m and n respectively, return the minimum window \n",
+    "substring\n",
+    " of s such that every character in t (including duplicates) is included in the window. If there is no such substring, return the empty string \"\".\n",
+    "\n",
+    "The testcases will be generated such that the answer is unique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "63957040-279b-4384-b104-09db16a61044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5082,8 +5304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "43fbc6ac-083e-436f-8e0d-65ee38ed655d",
+   "execution_count": 8,
+   "id": "e45a0e73-3261-4032-af01-e3ba8360ef50",
    "metadata": {},
    "outputs": [],
    "source": [
