added problem 239 sliding window maximum

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7ff909cd-238f-4d44-a031-4a32d00f4c19",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,8 @@
     "2. review Two Pointers and complete all problems for this section - DONE\n",
     "3. review Binary Search and complete all problems for this section - DONE\n",
     "4. review Stack and complete all problems for this section - DONE\n",
-    "5. review Sliding Window and compete all problems for this section - IN PROGRESS\n",
-    "6. review Linked List and complete all problems for this section - TODO"
+    "5. review Sliding Window and compete all problems for this section - DONE\n",
+    "6. review Linked List and complete all problems for this section - IN PROGRESS"
    ]
   },
   {
@@ -4610,6 +4610,7 @@
    "cell_type": "markdown",
    "id": "baef94a3-132e-4c60-aefb-ca94548f634c",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -5208,7 +5209,7 @@
    "source": [
     "#### explanation\n",
     "\n",
-    "for my code: my idea here was to use the solution in problem 242. Valid Anagram and combine it with a sliding window.\n",
+    "for my code: my idea here was to use the solution in problem 242 Valid Anagram and combine it with a sliding window.\n",
     "\n",
     "you begin by creating a hashmap of all the characters and their counts for s1. \n",
     "\n",
@@ -5439,7 +5440,10 @@
   {
    "cell_type": "markdown",
    "id": "75484dd5-9e1c-433d-a412-85870c221408",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### 239. Sliding Window Maximum (hard)"
    ]
@@ -5461,17 +5465,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# attempt"
+    "# attempt\n",
+    "class Solution:\n",
+    "    def maxSlidingWindow(self, nums: list, k: int) -> list:\n",
+    "        \n",
+    "        res = []\n",
+    "\n",
+    "        l, r = 0, k\n",
+    "\n",
+    "        while r <= len(nums):\n",
+    "            window = nums[l:r]\n",
+    "            res.append(max(window))\n",
+    "            l += 1\n",
+    "            r += 1\n",
+    "\n",
+    "        return res\n",
+    "# status = failure\n",
+    "# NOTE: so this seems to be all there is to it... but getting LTE. how to optimize?\n",
+    "# NOTE: in hindsight, it was obvious the answer wasn't going to be this simple for a hard problem"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "7f9c946d-bccf-4a13-9b14-58dbca7f892a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt\n",
+    "class Solution:\n",
+    "    def maxSlidingWindow(self, nums: list, k: int) -> list:\n",
+    "        \n",
+    "        res = []\n",
+    "\n",
+    "        l, r = 0, k\n",
+    "\n",
+    "        prevMax = None\n",
+    "\n",
+    "        while r <= len(nums):\n",
+    "            window = nums[l:r]\n",
+    "            # is there a more efficient way of getting the max of the window\n",
+    "            if not prevMax:\n",
+    "                res.append(max(window))\n",
+    "            else:\n",
+    "                if window[-1] > prevMax:\n",
+    "                    prevMax = window[-1]\n",
+    "                res.append(prevMax)\n",
+    "\n",
+    "            l += 1\n",
+    "            r += 1\n",
+    "\n",
+    "        return res\n",
+    "    \n",
+    "# status = failure\n",
+    "# NOTE: still too slow. also not sure this would past all test cases anyways...\n",
+    "# NOTE: had a decent intuition with this one but was missing the deque data structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "88408452-1e7d-42d7-9ca3-967bf17373e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# solution"
+    "# solution\n",
+    "class Solution:\n",
+    "    def maxSlidingWindow(self, nums: list, k: int) -> list:\n",
+    "        output = []\n",
+    "        q = collections.deque()  # index\n",
+    "        l = r = 0\n",
+    "        # O(n) O(n)\n",
+    "        while r < len(nums):\n",
+    "            # pop smaller values from q\n",
+    "            while q and nums[q[-1]] < nums[r]:\n",
+    "                q.pop()\n",
+    "            q.append(r)\n",
+    "\n",
+    "            # remove left val from window\n",
+    "            if l > q[0]:\n",
+    "                q.popleft()\n",
+    "\n",
+    "            if (r + 1) >= k:\n",
+    "                output.append(nums[q[0]])\n",
+    "                l += 1\n",
+    "            r += 1\n",
+    "\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b79bb3-d78a-4562-95bd-c7bc81bebf89",
+   "metadata": {},
+   "source": [
+    "#### explanation\n",
+    "\n",
+    "my own: this problem makes use of a \"monotonic decreasing queue\" which is apparently different than the monotonic decreasing stack encountered in problem 739 Daily Temperatures. essentially we can only append from the window values that are smaller than the rightmost value in the queue, and the leftmost value in our queue will always be the greatest value in the window (as we can see in the code, what is appended in the output is always the value at index 0 in the queue). however, if the leftmost number is out of bounds of the window it must be removed from the queue, and if the new value is greater than the right most value, we need to pop from the right until the queue is either empty or until we encounter a value that is greater than the one that was just added. it's important to note we **must actually store indeces in the queue and not the values themselves**, since we will need an index to figure out if a value in the queue is out of bounds or not \n",
+    "\n",
+    "this is how it plays out in the code. start an output array, a queue using collections.deque(), and start both your right and left pointer at 0 (we initially won't move the left pointer until the size of the window reaches length k). now start a while loop that runs while the right pointer is smaller than the length of nums\n",
+    "\n",
+    "the inner while loop first encountered deals with the situation where the number at the current iteration is greater than the rightmost ([-1]) value in the queue (we must use the index stored in the queue on nums to find out what the value actually is). as mentioned, continue popping from the end of the queue until it is either empty or until we encounter a value in the queue that is greater than the number at the current iteration (which is at index r). \n",
+    "\n",
+    "then we append to the queue the current index (conceptually, due to the inner while loop we see this means we can only grow the queue by adding smaller numbers, as we see otherwise we have to pop).\n",
+    "\n",
+    "then we must check that the leftmost index stored (left most being index 0 in the queue) is still within bounds by checking it is not smaller than the left pointer (it can be greater or equal to left). this looks confusing in code but is easy to visualize\n",
+    "\n",
+    "the last if statement deals with once we have a valid window. as mentioned in the beginning, both our left and right pointers start at 0, and so if we have a k=5 for example, we won't have a valid window until r=4 atleast (k appears to be a length, so we must add 1 to r since it is an index). once we have a valid window we can start appending to our output as well as incrementing our left pointer\n",
+    "\n",
+    "that last thing we need to do for each iteration of our outer while loop is increment the right pointer by 1\n",
+    "\n",
+    "finally, return the output"
    ]
   },
   {
