small updates to comments/markdown

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -24,6 +24,7 @@
    "cell_type": "markdown",
    "id": "c9c4b823-f5b6-45b2-9258-28f3a871cc04",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -40,7 +41,7 @@
     "3. review Binary Search and complete all problems for this section - DONE\n",
     "4. review Stack and complete all problems for this section - DONE\n",
     "5. review Sliding Window and compete all problems for this section - DONE\n",
-    "6. review Linked List and complete all problems for this section - IN PROGRESS"
+    "6. review Linked List and complete all problems for this section - IN PROGRESS - at problem 143"
    ]
   },
   {
@@ -5445,7 +5446,7 @@
     "tags": []
    },
    "source": [
-    "### 239. Sliding Window Maximum (hard)"
+    "### 239. Sliding Window Maximum (hard)*"
    ]
   },
   {
@@ -5582,6 +5583,7 @@
    "cell_type": "markdown",
    "id": "31c2e87f-65a1-4a68-ba9f-29107b7f115f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
