completed problem 143 and started problem 19

--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -41,7 +41,7 @@
     "3. review Binary Search and complete all problems for this section - DONE\n",
     "4. review Stack and complete all problems for this section - DONE\n",
     "5. review Sliding Window and compete all problems for this section - DONE\n",
-    "6. review Linked List and complete all problems for this section - IN PROGRESS - at problem 143"
+    "6. review Linked List and complete all problems for this section - IN PROGRESS - at problem 19"
    ]
   },
   {
@@ -5583,7 +5583,6 @@
    "cell_type": "markdown",
    "id": "31c2e87f-65a1-4a68-ba9f-29107b7f115f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6042,10 +6041,11 @@
    "cell_type": "markdown",
    "id": "c8999469-4b5f-4e90-a382-5dd0797d27bd",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### 143. Reorder List (medium)@ <- come back to this later and complete explanation & rework"
+    "### 143. Reorder List (medium)*"
    ]
   },
   {
@@ -6102,7 +6102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "60e222cd-2a8e-47a8-83ff-c81d2a4ce56c",
    "metadata": {},
    "outputs": [],
@@ -6110,7 +6110,7 @@
     "# solution\n",
     "# big O for this solution\n",
     "# time complexity: O(n)\n",
-    "# space complexity: O(1)\n",
+    "# space complexity: O(1) - this is done in O(1) memory, making it better but tricker. what's a simplier albeit more expensive solution?\n",
     "class Solution:\n",
     "    def reorderList(self, head: ListNode) -> None:\n",
     "        # find middle\n",
@@ -6131,14 +6131,9 @@
     "        # merge two halfs\n",
     "        first, second = head, prev\n",
     "        while second:\n",
-    "            # temporary assignment of values before breaking links\n",
     "            tmp1, tmp2 = first.next, second.next\n",
-    "            \n",
-    "            # breaking the links\n",
     "            first.next = second\n",
     "            second.next = tmp1\n",
-    "            \n",
-    "            # shifting pointers step\n",
     "            first, second = tmp1, tmp2"
    ]
   },
@@ -6152,23 +6147,23 @@
     "\n",
     "the first part of the algorithm consists of splitting the list in half by having a slow and a fast pointer. your slow pointer starts at the head (the beginning) and will move up by one, and your fast pointer starts at one node after the head (head.next) and will move up by two. you continue this until fast reaches the end of the linked list\n",
     "\n",
-    "once that is complete we need to reverse the second half. since slow ended before the second half, slow.next will represent the start of the second half which is why we assign second to slow.next. prev and slow.next will now both be equal to None since by reversing the list there will be nothing before the first node (NOTE: not sure right now why slow.next also needs to be None). after the assignment of the second and prev variable, the reversal of the second list is exactly the same as in probem 206 \n",
+    "once that is complete we need to reverse the second half. since slow ended before the second half, slow.next will represent the start of the second half which is why we assign second to slow.next. prev will now be equal to None since by reversing the list there will be nothing before the first node, and second.next will also be equal to None because when we merge the lists later on, we will want the end of the first half to point to null. after the assignment of the second and prev variable, the reversal of the second list is exactly the same as in probem 206 \n",
     "\n",
     "lastly we need to merge the two list. first is assigned to head because we want to start at the beginning, and second is assigned to prev as prev now represents the head of the reversed second half. \n",
     "\n",
-    "i currently have no idea how the rest of the last while loop works. i also don't understand where exactly the node replacement is done\n",
+    "we loop using \"second\" as it could potentially be smaller than the first half if we originally have an odd number of nodes. the merging part of this algorithm is easy to visualize; however the code is a bit tricky. store the next values for both first and second in temp variables. since we want to keep the first node where it is, we assign first.next to second, which will be the last node of the original linked list in the first iteration. so far we have L0 -> Ln. second.next will then be set tmp1, which we stored earlier and is equal L1. this is the \"alternating step\", as we can see now we have L0 -> Ln - L1. lastly, we shift our pointers so we will be able to get the .next values in the next iteration, and we do so by setting first and second to the stored next values from earlier - this is where we see why we initially had to store them at the beginning of the iteration, as before shifting the pointers we assign new values to first.next and second.next so we cannot reuse them to move forward.\n",
     "\n",
-    "*** continue ***"
+    "(so for example, on the first iteration, first = L0, second = Ln, tmp1 = L1 tmp2 = Ln-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "729d696e-4f19-491a-baa2-7bc97e5f786a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rework\n",
+    "# rework -> try a rework with an array? uses extra memory but would be good practice to see if i really understand concepts\n",
     "# Definition for singly-linked list.\n",
     "class ListNode:\n",
     "    def __init__(self, val=0, next=None):\n",
@@ -6179,7 +6174,81 @@
     "    def reorderList(self, head: [ListNode]) -> None:\n",
     "        \"\"\"\n",
     "        Do not return anything, modify head in-place instead.\n",
-    "        \"\"\""
+    "        \"\"\"\n",
+    "        # this problem has 3 steps...\n",
+    "\n",
+    "        # 1. find the middle\n",
+    "        # slow starts at first node, fast starts at the second\n",
+    "        slow, fast = head, head.next\n",
+    "\n",
+    "        # only care to see that fast and fast.next is not null, since slow will be behind\n",
+    "        # when fast reaches the end of the linked list, slow will represent the end of first half, therefor slow.next is beginning of second half\n",
+    "        while fast and fast.next:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "\n",
+    "        # 2. reverse second half\n",
+    "        # as mentioned, the next node in slow will be the halfway point\n",
+    "        second_half = slow.next\n",
+    "        # same as in reversing linked list problem \n",
+    "        # prev has to be None because should be nothing before the first node in the reversed linked list\n",
+    "        # slow.next also has to be None because we don't want the end of the first linked list to point to the begining of the second\n",
+    "        prev = slow.next = None \n",
+    "\n",
+    "        while second_half:\n",
+    "            temp = second_half.next # store next node\n",
+    "            second_half.next = prev # reverse direction\n",
+    "            prev = second_half # update left pointer\n",
+    "            second_half = temp # update right pointer\n",
+    "\n",
+    "\n",
+    "        # 3 merge the two halfs\n",
+    "        first, second_half = head, prev\n",
+    "        # you want to loop using second_half since it could be potentially shorter than the first half if we have an odd number of nodes originally\n",
+    "        while second_half:\n",
+    "            temp1, temp2 = first.next, second_half.next # storing next nodes\n",
+    "\n",
+    "            # changing the links, alternating values between first and second_half\n",
+    "            first.next = second_half\n",
+    "            second_half.next = temp1\n",
+    "\n",
+    "            first, second_half = temp1, temp2 # shifting pointers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da92c305-a920-48a5-87f3-73665b8c735d",
+   "metadata": {},
+   "source": [
+    "### 19. Remove Nth Node From End of List (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc8d3e71-b1f3-4ca0-99d5-f192607a5bdc",
+   "metadata": {},
+   "source": [
+    "Given the head of a linked list, remove the nth node from the end of the list and return its head."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d50a5025-81cd-4fa9-aa44-a998940a7bb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6c83c58d-7961-4d7e-8cb8-f8e3ffc97b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution"
    ]
   }
  ],
