--- a/neetcode.ipynb
+++ b/neetcode.ipynb
@@ -5583,7 +5583,6 @@
    "cell_type": "markdown",
    "id": "31c2e87f-65a1-4a68-ba9f-29107b7f115f",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -6572,6 +6571,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "03389f34-a79b-49fd-b4ab-96819ac14311",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt reworked to be less verbose\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "        \n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1: [ListNode], l2: [ListNode]) -> [ListNode]:\n",
+    "        \n",
+    "        num1 = ''\n",
+    "        num2 = ''\n",
+    "        \n",
+    "        while l1:\n",
+    "            num1 = str(l1.val) + num1\n",
+    "            l1 = l1.next\n",
+    "        while l2:\n",
+    "            num2 = str(l2.val) + num2\n",
+    "            l2 = l2.next\n",
+    "            \n",
+    "        sumnum = str(int(num1) + int(num2))\n",
+    "        \n",
+    "        res = dummy = ListNode()\n",
+    "        prev = None\n",
+    "\n",
+    "        for val in sumnum:\n",
+    "            node = ListNode(val, prev)\n",
+    "            dummy.next = node\n",
+    "            prev = node\n",
+    "        \n",
+    "        return res.next\n",
+    "    \n",
+    "# status = success\n",
+    "# NOTE: apparently way better time & space complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6207aa16-5b4f-4b1f-be28-8787bf17b179",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rework creation of linked list to test knowledge\n",
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "        \n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1: [ListNode], l2: [ListNode]) -> [ListNode]:\n",
+    "        \n",
+    "        num1 = ''\n",
+    "        num2 = ''\n",
+    "        \n",
+    "        while l1:\n",
+    "            num1 = str(l1.val) + num1\n",
+    "            l1 = l1.next\n",
+    "        while l2:\n",
+    "            num2 = str(l2.val) + num2\n",
+    "            l2 = l2.next\n",
+    "            \n",
+    "        sumnum = str(int(num1) + int(num2))\n",
+    "        \n",
+    "        res = dummy = ListNode()\n",
+    "\n",
+    "        for val in sumnum[::-1]:\n",
+    "            node = ListNode(val)\n",
+    "            res.next = node\n",
+    "            res = res.next\n",
+    "        \n",
+    "        return dummy.next\n",
+    "    \n",
+    "# status = success"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "16d5d50e-fd34-4aef-a623-f4e0eddf79cd",
    "metadata": {},
@@ -6768,6 +6851,46 @@
     "why this works exactly can easily be explained by the diagram below. essentially, if there is a cycle, each iteration the gap between the slow and fast pointer decreases by 1, and so the maximum number of iteration that the algorithm would need to go through is n if we assume that n the is the entire length of the linked list (this is visualized below by 10 being the gap, +1 being the gap increased by the slow pointer moving up by 1, and -2 being the gap decreased by the fast pointer catching up to the slow pointer). because the gap is decreased by 1 each iteration, that means you are guaranteed that the fast pointer will land exactly where the slow pointer is at some point without skipping over it. a more detailed explanation can be seen on the neetcode video for leetcode problem 141.\n",
     "\n",
     "![leetcode141.png](attachment:4785c2be-ee2a-4b89-b134-597b1f0208d2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5142880e-c79e-442a-b3ae-a961fbc315e7",
+   "metadata": {},
+   "source": [
+    "## 287. Find the Duplicate Number (medium)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e5a2454-6e43-4a18-9861-f1b54402c91d",
+   "metadata": {},
+   "source": [
+    "Given an array of integers nums containing n + 1 integers where each integer is in the range [1, n] inclusive.\n",
+    "\n",
+    "There is only one repeated number in nums, return this repeated number.\n",
+    "\n",
+    "You must solve the problem without modifying the array nums and uses only constant extra space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a47ea33a-faec-4f46-987e-7eb644ef5a63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# attempt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ef8e6099-1d50-448b-923e-cef55f7854f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solution"
    ]
   }
  ],
